# deb-repo.rs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  auth-example.toml  build.rs  debian-build.toml  flake.nix  test.sh  ubuntu-build.toml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: release.yml  rust.yml  test.yml
benches/: control.rs  solver.rs  version.rs
cmd/: README.md  common.rs  exec.rs  main.rs  nrun.rs  tar.rs  tar_xattr.rs
debian/: changelog  control  rdebootstrap.postinst  rules  usr.bin.rdebootstrap
debian/source/: options
debrepo/: Cargo.toml  README.md
debrepo/benches/: solver.rs  version.rs
debrepo/fuzz/: Cargo.toml
debrepo/src/: arch.rs  archive.rs  artifact.rs  auth.rs  auth_vault.rs  builder.rs  cli.rs  cli_edit.rs  content.rs  control.rs  deb.rs  error.rs  exec.rs  hash.rs  idmap.rs  indexfile.rs  kvlist.rs  lib.rs  manifest.rs  manifest_doc.rs  manifest_doc_test.rs  packages.rs  podman.rs  release.rs  sandbox.rs  sources.rs  spec.rs  stage.rs  staging.rs  tar.rs  transport.rs  universe.rs  version.rs
debrepo/tests/: api.rs  archive.rs  artifact.rs  auth.rs  builder.rs  cli.rs  comp.rs  content.rs  control.rs  deb.rs  edit.rs  exec.rs  hash.rs  indexfile.rs  kvlist.rs  lib_public.rs  manifest.rs  manifest_doc.rs  packages.rs  release.rs  sources.rs  stage.rs  staging.rs  tar_tests.rs  transport.rs  universe.rs  version.rs
debrepo/tests/common/: mod.rs
debrepo/tests/fixtures/deb/: README.md  build-fixtures.sh  minimal-gzip.deb  minimal-none.deb  minimal-xz.deb  minimal-zstd.deb  rich-xz.deb
debrepo/tests/fixtures/deb/minimal-root/DEBIAN/: control
debrepo/tests/fixtures/deb/rich-root/DEBIAN/: conffiles  control
debrepo/tests/fixtures/deb/rich-root/etc/: fixture-rich.conf
debrepo/tests/fixtures/deb/rich-src/debian/: changelog  control  rules
docs/man/: environment.roff  examples.roff  files.roff  see-also.roff
fuzz/fuzz_targets/: tar.rs
keyring/: debian-keys.list  keys.list
rdebootstrap/: Cargo.toml
rdebootstrap/cmd/: cli.rs  main.rs  tar.rs
src/: arch.rs  archive.rs  artifact.rs  auth.rs  auth_vault.rs  builder.rs  cache.rs  cli.rs  cli_edit.rs  comp.rs  content.rs  control.rs  deb.rs  deployfs.rs  digest.rs  error.rs  exec.rs  fsrepo.rs  hash.rs  helper.rs  httprepo.rs  httptransport.rs  idmap.rs  indexfile.rs  kvlist.rs  lib.rs  manifest.rs  manifest_doc.rs  manifest_doc_test.rs  packages.rs  recipe.rs  release.rs  repo.rs  sandbox.rs  source.rs  spec.rs  stage.rs  staging.rs  tar.rs  transport.rs  (+3 more)
test/: 100_spec_inheritance_build.sh  101_spec_multi_parent_build.sh  10_build_sandbox.sh  110_lock_error_paths.sh  120_search_and_show.sh  130_edit_noninteractive.sh  140_manifest_import_build.sh  145_manifest_chain_local_path_resolution.sh  150_manifest_import_refresh.sh  152_manifest_import_archives_only.sh  155_artifact_lock_safety.sh  160_local_deb_overrides_archive.sh  20_build_podman_executor.sh  30_local_tar_artifact_refresh.sh  40_text_artifact_and_build_script.sh  50_local_deb_package.sh  55_local_path_resolution.sh  60_help_and_surface_smoke.sh  70_manifest_mutation_smoke.sh  80_spec_subcommands.sh  90_artifact_staging_matrix.sh  Packages-solver-issue  lib.sh
tests/: tar_tests.rs
xtask/: Cargo.toml
xtask/build-man/: main.rs
xtask/update-keyring/: main.rs
