[package]
name = "debrepo"
version = "0.0.0"
publish = false
rust-version = "1.82"
edition = "2021"

[dev-dependencies]
criterion = "0.7"

[dependencies]
anyhow = "1"
ouroboros = "0.18"
async-trait = "0.1"
futures = "0.3"
futures-io = "0.3"
futures-util = "0.3"
pin-project = "1"
async-std = { version = "1", features = [ "attributes" ] }
async-tar = "0.5"
isahc = { version = "1", default-features = false, features = [ "static-curl", "static-ssl", "http2" ] }
url = "2"
chrono = { version = "0.4", features = ["serde"] }
digest = "0.10"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
memchr = "2"
criterion = "0.7"
resolvo = "0.10.0"
smallvec = { version = "1.13", features = ["serde", "union"] }
iterator-ext = "0.2.1"
log = "0.4.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
tracing-log = "0.2.0"
clap = { version = "4", features = ["derive", "env"] }
regex = "1.11"
tempfile = "3.15.0"
filetime = "0.2.25"
petgraph = { version = "0.8.2", default-features = false, features = [ "graphmap" ] }
itertools = "0.14.0"
nix = { version = "0.30.1", features = [ "sched", "mount", "process", "fs", "signal", "user" ] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
generic-array = "1.1.1"
enum_dispatch = "0.3.13"
toml = "0.9.5"
once_cell = "1.21.3"
base64 = "0.22.1"
sequoia-openpgp = { version = "2.0.0", default-features = false, features = [ "crypto-openssl" ] }
liblzma = { version = "0.4.2", features = ["static"] }
libz-sys = { version = "1.1", features = ["static"] }

[dependencies.async-compression]
version = "0.4"
features = [ "futures-io", "bzip2", "gzip", "zstd", "lzma", "xz" ]

[build-dependencies]
isahc = { version = "1", default-features = false, features = [ "static-curl", "static-ssl", "http2" ] }
sequoia-openpgp = { version = "2.0.0", default-features = false, features = [ "crypto-openssl" ] }

[lib]
name = "debrepo"
path = "src/lib.rs"

[[bench]]
name = "control"
harness = false

[[bench]]
name = "version"
harness = false

[[bench]]
name = "solver"
harness = false

[[bin]]
name = "deb-repo"
path = "cmd/main.rs"

[[bin]]
name = "nrun"
path = "cmd/nrun.rs"
