[package]
name = "debrepo"
version = "0.0.0"
publish = false
rust-version = "1.82"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["md-5"]

[lib]
name = "debrepo"
path = "src/lib.rs"

[[bin]]
name = "deb-repo"
path = "cmd/main.rs"

[[bin]]
name = "nrun"
path = "cmd/nrun.rs"

[dependencies]
anyhow = "1"
async-std = { version = "1", features = [ "attributes" ] }
async-tar = "0.5"
async-trait = "0.1"
base64 = "0.22.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.7"
digest = "0.10"
enum_dispatch = "0.3.13"
filetime = "0.2.25"
futures = "0.3"
gpgme = "0.11.0"
hex = "0.4"
isahc = { version = "1", default-features = false, features = [ "http2" ] }
iterator-ext = "0.2.1"
itertools = "0.14.0"
md-5 = "0.10"
memchr = "2"
nix = { version = "0.30.1", features = [ "sched", "mount", "process", "fs", "signal", "user" ] }
once_cell = "1.21.3"
ouroboros = "0.18"
petgraph = { version = "0.8.2", default-features = false, features = [ "graphmap" ] }
pin-project = "1"
regex = "1.11"
resolvo = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml_ng = "0.10.0"
sha2 = "0.10"
smallvec = { version = "1.13", features = ["serde", "union"] }
smol = "2.0.2"
tempfile = "3.15.0"
toml_edit = { version = "0.23.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }
url = "2"

[dependencies.async-compression]
version = "0.4"
features = ["futures-io", "bzip2", "gzip", "zstd", "lzma", "xz"]

[build-dependencies]
clap_mangen = "0.2.29"
gpgme = "0.11.0"
isahc = { version = "1", default-features = false, features = [ "http2" ] }
xtask = "0.1.0"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "control"
harness = false

[[bench]]
name = "version"
harness = false

[[bench]]
name = "solver"
harness = false
