[package]
name = "debrepo"
version = "0.0.0"
publish = false
rust-version = "1.86"
edition = "2021"

[package.metadata.cargo-machete]
ignored = ["md-5"]

[lib]
name = "debrepo"
path = "src/lib.rs"

[[bin]]
name = "deb-repo"
path = "cmd/main.rs"

[[bin]]
name = "nrun"
path = "cmd/nrun.rs"

[[bin]]
name = "tar-test"
path = "cmd/tar.rs"

[dependencies]
anyhow = "1"
async-lock = "3.4.1"
async-trait = "0.1"
base64 = "0.22"
blocking = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
criterion = "0.5.1"
digest = "0.10"
enum_dispatch = "0.3"
filetime = "0.2"
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-lite = "2"
gpgme = "0.11"
hex = "0.4"
isahc = { version = "1", default-features = false, features = [ "http2" ] }
iterator-ext = "0.2"
itertools = "0.13"
macro_rules_attribute = "0.2"
md-5 = "0.10"
memchr = "2"
nix = { version = "0.29.0", features = [ "sched", "mount", "process", "fs", "signal", "user" ] }
once_cell = "1.21"
ouroboros = "0.18"
petgraph = { version = "0.8", default-features = false, features = [ "graphmap" ] }
pin-project = "1"
regex = "1.11"
resolvo = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10"
smallvec = { version = "1.13", features = ["serde", "union"] }
smol = "2"
smol-macros = "0.1"
static_assertions = "1"
tempfile = "3.15"
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std"] }

[dependencies.async-compression]
version = "0.4"
features = ["futures-io", "bzip2", "gzip", "zstd", "lzma", "xz"]

[build-dependencies]
clap_mangen = "0.2.29"
gpgme = "0.11.0"
isahc = { version = "1", default-features = false, features = [ "http2" ] }
xtask = "0.1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "control"
harness = false

[[bench]]
name = "version"
harness = false

[[bench]]
name = "solver"
harness = false
