[package]
name = "debrepo"
version = "0.1.2"
rust-version = "1.89"
edition = "2021"
description = "Library for manifest-driven Debian/Ubuntu bootstrap and APT archive resolution."
license = "MIT"
documentation = "https://docs.rs/debrepo"
repository = "https://github.com/growler/rdebootstrap.rs"
homepage = "https://github.com/growler/rdebootstrap.rs"
readme = "README.md"
keywords = ["debian", "deb", "bootstrap", "debootstrap"]
categories = ["development-tools::build-utils"]

[package.metadata.cargo-machete]
ignored = ["md-5"]

[lib]
name = "debrepo"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
async-io = "2.5.0"
async-lock = "3.4.1"
base64 = "0.22"
blake3 = { version = "1.8.1", features = ["traits-preview"] }
blocking = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.48", features = ["derive", "env"] }
criterion = "0.5.1"
digest = "0.10"
futures-lite = "2.3.0"
futures = { version = "0.3", default-features = false, features = ["std"] }
gpgme = "0.11"
hex = "0.4"
indicatif = "0.18.2"
isahc = { version = "1", default-features = false, features = ["http2"] }
itertools = "0.13"
libc = "0.2.175"
md-5 = "0.10"
memchr = "2"
memmap2 = "0.9.8"
num_cpus = "1.16.0"
once_cell = "1.21"
ouroboros = "0.18"
petgraph = { version = "0.8", default-features = false, features = ["graphmap"] }
pin-project-lite = "0.2.13"
regex = "1.11"
resolvo = "0.10.2"
rustix = { version = "1", features = ["fs", "pipe", "thread", "mount"] }
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
sha1 = "0.10.6"
sha2 = "0.10"
smallvec = { version = "1.13", features = ["serde", "union"] }
smol = "2"
smol-macros = "0.1"
static_assertions = "1"
tempfile = "3.15"
thiserror = "2.0.17"
toml_edit = { version = "0.22.22", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "std"] }
url = { version = "2.5.4", features = ["serde"] }

[dependencies.async-compression]
version = "0.4.32"
features = ["futures-io", "bzip2", "gzip", "zstd", "lzma", "lz4", "xz"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "control"
harness = false

[[bench]]
name = "version"
harness = false

[[bench]]
name = "solver"
harness = false
