[package]
name = "rdebootstrap"
version = "0.1.4"
rust-version = "1.89"
edition = "2021"
description = "Debian/Ubuntu bootstrapper that builds a root filesystem tree from a lockable manifest."
license = "MIT"
documentation = "https://docs.rs/debrepo"
repository = "https://github.com/growler/rdebootstrap.rs"
homepage = "https://github.com/growler/rdebootstrap.rs"
readme = "README.md"
keywords = ["debian", "deb", "debootstrap", "rootfs"]
categories = ["command-line-utilities", "development-tools::build-utils"]

[package.metadata.cargo-machete]
ignored = ["anyhow"] # required by macro from debrepo

[[bin]]
name = "rdebootstrap"
path = "cmd/main.rs"

[[bin]]
name = "tar-test"
path = "cmd/tar.rs"

[[bin]]
name = "tar-xattr"
path = "cmd/tar_xattr.rs"

[lib]
path = "cmd/cli.rs"

[dependencies]
debrepo = { version = "0.1.4", path = "../debrepo" }
anyhow = "1.0.99"
clap = { version = "4.5.48", features = ["derive", "env"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
futures-lite = "2.3.0"
once_cell = "1.21"
smol = "2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "std"] }
